<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/connect_fragment_first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <Button
        android:id="@+id/statusButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/disconnected"
        android:backgroundTint="@color/disconnected_red"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/connect_fragment_first_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/connect_fragment_second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintTop_toBottomOf="@id/statusButton"
        />

    <ImageButton
        android:id="@+id/statusImageButton"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@null"
        android:contentDescription="@string/cloudButtonDescription"
        app:layout_constraintTop_toBottomOf="@+id/connect_fragment_second_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/connect_fragment_progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/statusImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/connect_fragment_third_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/statusImageButton"
        />

    <!-- First button: Block Trackers -->
    <ImageButton
        android:id="@+id/connect_block_trackers_image_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@null"
        android:contentDescription="@string/block_trackers_button"
        android:src="@drawable/block_trackers_icon"
        android:tag="0"
        app:layout_constraintTop_toTopOf="@id/connect_block_trackers_button"
        app:layout_constraintBottom_toBottomOf="@id/connect_block_trackers_button"
        app:layout_constraintEnd_toStartOf="@id/connect_block_trackers_button"
        />

    <TextView
        android:id="@+id/connect_block_trackers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/block_trackers_button"
        android:textAlignment="textStart"
        android:lines="1"
        android:tag="0"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/connect_fragment_third_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/connect_block_trackers_checkmark_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:contentDescription="@string/block_trackers_button"
        android:tag="0"
        android:src="@drawable/checkmark"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/connect_block_trackers_button"
        app:layout_constraintBottom_toBottomOf="@id/connect_block_trackers_button"
        app:layout_constraintStart_toEndOf="@id/connect_block_trackers_button"
        />

    <!-- Second button: Block Threats -->
    <ImageButton
        android:id="@+id/connect_block_threats_image_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:background="@null"
        android:contentDescription="@string/block_threats_button"
        android:src="@drawable/block_threats_icon"
        android:tag="1"

        app:layout_constraintTop_toTopOf="@id/connect_block_threats_button"
        app:layout_constraintBottom_toBottomOf="@id/connect_block_threats_button"
        app:layout_constraintEnd_toStartOf="@id/connect_block_threats_button"
        />

    <TextView
        android:id="@+id/connect_block_threats_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/block_threats_button"
        android:textAlignment="textStart"
        android:lines="1"
        android:tag="1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/connect_block_trackers_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/connect_block_threats_checkmark_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@null"
        android:contentDescription="@string/block_threats_button"
        android:src="@drawable/checkmark"
        android:tag="1"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/connect_block_threats_button"
        app:layout_constraintBottom_toBottomOf="@id/connect_block_threats_button"
        app:layout_constraintStart_toEndOf="@id/connect_block_threats_button"
        />

    <!-- Third button: Always-on VPN -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/connect_block_threats_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <TextView
        android:id="@+id/connect_toggle_always_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_always_on_button"
        android:visibility="gone"
        android:layout_gravity="center_vertical"
        android:tag="2"
        android:lines="1"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textAllCaps="false"
        />
    <ImageButton
        android:id="@+id/connect_toggle_always_on_image_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:background="@null"
        android:visibility="gone"
        android:tag="2"
        android:contentDescription="@string/toggle_always_on_button"
        android:src="@drawable/external_icon"
        />
    </LinearLayout>

    <!-- Fourth button: website -->
    <TextView
        android:id="@+id/connect_website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/website_url"
        android:tag="2"
        android:textSize="12sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/store_fragment_container"
        android:translationZ="8dp"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>